added flamingo and idefics

--- a/configs/vlm_config.json
+++ b/configs/vlm_config.json
@@ -1,21 +1,22 @@
 {
     "n_gpu": 1,
-    "cuda_nr": 5,
+    "cuda_nr": 7,
     "seed": 42,
-    "pretrained_vlm_hf_id": "llava-hf/llava-1.5-7b-hf",
+    "model_family": "idefics",
+    "pretrained_vlm_hf_id": "HuggingFaceM4/idefics2-8b",
     "df_path": "../data/FSC147_384_V2/annotations/abacus_v8.csv",
     "bboxes_path": "../../../../data/add_disk1/panos/abacus/bboxes/",
-    "output_path": "../outputs/dfs/abacus_results_bicubic_up_no_desc.csv",
+    "output_path": "../outputs/dfs/idefics_3_shot_bicupic_up.csv",
     "prompt_template": "USER: <image>\nIs this {obj_prompt_notation}? Please answer with a yes or a no.\nASSISTANT:",
     "logging":  {
         "print_on_screen": true
         },
     "dataloader_params": {
-        "batch_size": 6,
-        "num_workers": 8
+        "batch_size": 8,
+        "num_workers": 12
     },
     "generation_params":  {
-        "max_length": 50
+        "max_length": 100
         },
     "prompting_strategy": "icl"
 }
