--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ huggingface-hub==0.25.0
 idna==3.10
 Jinja2==3.1.4
 MarkupSafe==2.1.5
+matplotlib==3.9.2
 mpmath==1.3.0
 networkx==3.2.1
 numpy==2.0.2
